fdo#72306 Axis names were lost after saving file on LO.

While exporting chart "crosses" position values were
  not handled properly in chartexport.
  Fixed this issue by handling "autozero" value for c:crosses.
  Added unit test.

Change-Id: I3489908d4c3d4b41a04debfecf95e65f373649ce