chart2/qa/extras/chart2export.cxx
@@ -34,6 +34,7 @@ public:
     void testTrendline();
     void testStockChart();
     void testBarChart();
+    void testCrosses();
 
     CPPUNIT_TEST_SUITE(Chart2ExportTest);
     CPPUNIT_TEST(test);
@@ -41,6 +42,7 @@ public:
     CPPUNIT_TEST(testTrendline);
     CPPUNIT_TEST(testStockChart);
     CPPUNIT_TEST(testBarChart);
+    CPPUNIT_TEST(testCrosses);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -423,6 +425,16 @@ void Chart2ExportTest::testBarChart()
        return;
 
     assertXPath(pXmlDoc, "/c:chartSpace/c:chart/c:plotArea/c:barChart/c:barDir", "val", "col");
+}
+
+void Chart2ExportTest::testCrosses()
+{
+    load("/chart2/qa/extras/data/docx/", "Bar_horizontal_cone.docx");
+    xmlDocPtr pXmlDoc = parseExport("word/charts/chart", "Office Open XML Text");
+    if (!pXmlDoc)
+       return;
+
+    assertXPath(pXmlDoc, "/c:chartSpace/c:chart/c:plotArea/c:catAx/c:crosses", "val", "autoZero");
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Chart2ExportTest);
